[package]
name = "leptonica-plumbing"
version = "0.3.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `leptonica-sys`"
homepage = "https://github.com/ccouzens/leptonica-plumbing"
repository = "https://github.com/ccouzens/leptonica-plumbing"
readme = "README.md"
keywords = ["leptonica", "image"]
license = "MIT"

[dependencies]
leptonica-sys = { git = "https://github.com/vim-zz/leptonica-sys", branch = "fix_macos" }
thiserror = "1.0"
